# aurora

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  data.py  main.py  models.py  prompt.py  pyproject.toml
docs/: design-decisions.md  prd.md
tests/: test_api.py  test_data.py  test_models.py  test_prompt.py
