[project]
name = "aurora"
version = "0.1.0"
description = "Question-answering service for Aurora concierge member data"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.34",
    "google-genai~=1.0",
    "httpx~=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.25",
    "pytest-cov>=7.1.0",
]
